challenge_1/infra/VPC/internet_gw.tf
resource "aws_internet_gateway" "gw" {
        vpc_id = aws_vpc.vpc_main.id

        tags   = {
        Name   = "ig_main"
        }
  
}
